src/test/test-models/good/lp_in_fun.stan
functions {
  void foo_lp() {
    print("lp__ = ", target());
  }
}
model {

}

