src/test/test-models/bad/rng_loc2.stan
functions {
  real foo_lp(real x) {
    return exponential_rng(x);
  }
}
model {
}
